mycluster/argocd/argocd-certificate.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: my-ca-issuer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - alb.example.test
      secretName: argocd-cert
  rules:
    - host: alb.example.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
